src/deployment-types/rolling-update/nginx-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-rolling-update
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 1
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: dhinojosa/simple-nginx:1.0.1
                  ports:
                      - containerPort: 80
